--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "flatten": "node scripts/flatten-contracts.js",
     "test:ci": "scripts/run-test.sh",
     "tronbox": "tronbox",
-    "tronbox:migrate:8": "tronbox migrate --network main --f 8 --to 8"
+    "tronbox:migrate:8": "tronbox migrate --network main --f 8 --to 8",
+    "postinstall": "patch-package"
   },
   "repository": {
     "type": "git",
@@ -83,6 +84,7 @@
     "glob": "^7.1.6",
     "moonwalker": "github:atvanguard/moonwalker#4c4592e2d6c1744fbcd9452cf0f00e9beb236b21",
     "nunjucks": "^3.2.1",
+    "patch-package": "^8.0.0",
     "solium": "^1.2.5",
     "tronbox": "^3.1.0",
     "truffle": "^5.4.15",
